--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest --cov=torch_june test --cov-report xml
+        pytest --cov=torch_june_inference test --cov-report xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
