--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,16 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Build multinest
+      run: |
+        sudo apt install -y libblas{3,-dev} liblapack{3,-dev} libatlas-basea-dev cmake build-essential git gfortran
+        git clone https://github.com/JohannesBuchner/MultiNest.git
+        cd MultiNest/build
+        cmake .. && make
+        sudo make install
+        cd -
+
     - name: Install requirements
       run: |
         python -m pip install --upgrade pip
@@ -38,14 +48,6 @@ jobs:
       run: |
         pip install git+ssh://git@github.com/arnauqb/torch_june.git
 
-    - name: Build multinest
-      run: |
-        sudo apt install -y libblas{3,-dev} liblapack{3,-dev} libatlas{3-base,-dev} cmake build-essential git gfortran
-        git clone https://github.com/JohannesBuchner/MultiNest.git
-        cd MultiNest/build
-        cmake .. && make
-        sudo make install
-        cd -
 
     - name: Install package
       run: python setup.py install
