--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         git clone https://github.com/JohannesBuchner/MultiNest.git
         cd MultiNest/build
         cmake .. && make
-        sudo make install
+        export LD_LIBRARY_PATH=../lib/:$LD_LIBRARY_PATH
         cd -
 
     - name: Install requirements
