--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
         cd MultiNest/build
         cmake .. && make
         export LD_LIBRARY_PATH=../lib/:$LD_LIBRARY_PATH
+        echo $LD_LIBRARY_PATH
+        ls ../lib
         cd -
 
     - name: Install requirements
