--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: Build and test package
 
+env:
+  LD_LIBRARY_PATH: /home/runner/work/torch_june_inference/torch_june_inference/MultiNest/lib
+
 on:
   pull_request:
     branches:
@@ -32,8 +35,8 @@ jobs:
         git clone https://github.com/JohannesBuchner/MultiNest.git
         cd MultiNest/build
         cmake .. && make
-        export LD_LIBRARY_PATH=/home/runner/work/torch_june_inference/torch_june_inference/MultiNest/lib
-        echo '::set-env name=LD_LIBRARY_PATH::../lib'
+        #export LD_LIBRARY_PATH=
+        #echo '::set-env name=LD_LIBRARY_PATH::../lib'
         cd -
 
     - name: Test multinest
