--- a/configs/pyro.yaml
+++ b/configs/pyro.yaml
@@ -18,6 +18,21 @@ parameters_to_fit:
       dist: Normal
       loc: 0.0
       scale: 0.1
+  infection_passing.log_beta_company:
+    prior:
+      dist: Normal
+      loc: 0.0
+      scale: 0.1
+  infection_passing.log_beta_school:
+    prior:
+      dist: Normal
+      loc: 0.3
+      scale: 0.1
+  infection_passing.log_beta_leisure:
+    prior:
+      dist: Normal
+      loc: -0.6
+      scale: 0.1
 
 emulator:
   use_emulator: true
@@ -31,4 +46,4 @@ data:
 
 likelihood:
   distribution: Normal
-  error: 0.005
+  error: 0.01
