--- a/configs/pyro.yaml
+++ b/configs/pyro.yaml
@@ -11,6 +11,7 @@ inference_configuration:
     max_tree_depth: 5
   num_samples: 5000
   warmup_steps: 1000
+  likelihood: Normal
 
 parameters_to_fit:
   infection_networks.networks.household.log_beta:
@@ -18,16 +19,16 @@ parameters_to_fit:
       dist: Uniform
       low: -0.25
       high: 0.25
-  infection_networks.networks.company.log_beta:
-    prior:
-      dist: Uniform
-      low: -0.25
-      high: 0.25
-  infection_networks.networks.school.log_beta:
-    prior:
-      dist: Uniform
-      low: -0.25
-      high: 0.25
+        #infection_networks.networks.company.log_beta:
+        #  prior:
+        #    dist: Uniform
+        #    low: -0.25
+        #    high: 0.25
+        #infection_networks.networks.school.log_beta:
+        #  prior:
+        #    dist: Uniform
+        #    low: -0.25
+        #    high: 0.25
 
 emulator:
   use_emulator: false
@@ -36,19 +37,20 @@ emulator:
 
 data:
   observable: 
-    cases_by_age_18:
-      time_stamps: [10, 20, 30]
-    cases_by_age_25:
-      time_stamps: [10, 20, 30]
-    cases_by_age_65:
-      time_stamps: [10, 20, 30]
-    cases_by_age_80:
-      time_stamps: [10, 20, 30]
-    cases_by_age_100:
-      time_stamps: [10, 20, 30]
+    #cases_by_age_18:
+    #  time_stamps: [10, 20, 30]
+    #cases_by_age_25:
+    #  time_stamps: [10, 20, 30]
+    #cases_by_age_65:
+    #  time_stamps: [10, 20, 30]
+    #cases_by_age_80:
+    #  time_stamps: [10, 20, 30]
+    #cases_by_age_100:
+    #  time_stamps: [10, 20, 30]
+    cases_per_timestep:
+      time_stamps: [-1]
+      error: 0.002
+    
   observed_data: "./june_example/results.csv"
 
-likelihood:
-  distribution: Normal
-  error: 0.025
 
