--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: install openmpi
+      run: |
+        sudo apt update -y
+        sudo apt install -y openmpi-bin
+        sudo apt install -y libopenmpi-dev
+
     - name: Build multinest
       run: |
         sudo apt install -y libblas{3,-dev} liblapack{3,-dev} libatlas-base-dev cmake build-essential git gfortran
