--- a/configs/pyro.yaml
+++ b/configs/pyro.yaml
@@ -8,17 +8,17 @@ results_path: "./pyro_tests"
 inference_configuration:
   kernel: 
     type: NUTS
-    max_tree_depth: 5
+    max_tree_depth: 7
   num_samples: 5000
-  warmup_steps: 1000
+  warmup_steps: 200
   likelihood: Normal
 
 parameters_to_fit:
   infection_networks.networks.household.log_beta:
     prior:
-      dist: Uniform
-      low: -0.25
-      high: 0.25
+      dist: Normal
+      loc: 0.3
+      scale: 0.1
         #infection_networks.networks.company.log_beta:
         #  prior:
         #    dist: Uniform
@@ -31,9 +31,9 @@ parameters_to_fit:
         #    high: 0.25
 
 emulator:
-  use_emulator: false
-  emulator_config_path: "./configs/emulator_cosma.yaml"
-  emulator_path: "./data/emulator.path"
+  use_emulator: true
+    #emulator_config_path: "./configs/emulator.yaml"
+  emulator_path: "./data/emulator.pkl"
 
 data:
   observable: 
