--- a/configs/june_config.yaml
+++ b/configs/june_config.yaml
@@ -1,7 +1,7 @@
 title: Torch June default configuration file.
 
 system:
-  device: cpu
+  device: cuda:0
   random_seed: random
 
     #data_path: '@torch_june/test/data/data.pkl'
@@ -10,7 +10,7 @@ data_path: '../torch_june/worlds/data_london.pkl'
 save_path: ./june_example
 
 timer:
-  total_days: 15
+  total_days: 30
   initial_day: '2022-02-01'
   step_duration:
     weekday:
@@ -41,15 +41,15 @@ timer:
       - household
 
 infection_seed:
-  n_initial_cases: 2000
+  n_initial_cases: 1000
 
 networks:
   household:
     log_beta: 0.5
   company:
-    log_beta: -0.1
+    log_beta: 0.3
   school:
-    log_beta: 0.2
+    log_beta: 0.4
   pub:
     log_beta: -0.5
   gym:
