--- a/configs/emulator.yaml
+++ b/configs/emulator.yaml
@@ -2,9 +2,9 @@ title: Emulator example configuration file.
 
 device: "cuda:0"
 
-june_configuration_file: "/home/arnau/code/torch_june_inference/configs/june_config.yaml"
+june_configuration_file: "./configs/june_config.yaml"
 
 emulator_configuration:
   time_stamps: [-1]
-  save_path: "data/emulator.pkl"
-  samples_path: "/home/arnau/code/torch_june_inference/data/samples.pkl"
+  save_path: "./data/emulator.pkl"
+  samples_path: "./data/samples.pkl"
