--- a/configs/pyro.yaml
+++ b/configs/pyro.yaml
@@ -1,7 +1,7 @@
 title: Pyro example configuration file.
 
 device: "cuda:0"
-june_configuration_file: "./configs/june_config.yaml"
+june_configuration_file: "./configs/june.yaml"
 
 results_path: "./pyro_4p"
 
