--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,4 +8,5 @@ nav:
     - inference/gradient_descent.md
     - inference/hmc.md
     - inference/multinest.md
+    - inference/svi.md
 theme: readthedocs
