--- a/configs/june_small.yaml
+++ b/configs/june_small.yaml
@@ -10,7 +10,7 @@ data_path: '../torch_june/worlds/data_small.pkl'
 save_path: ./results/june
 
 timer:
-  total_days: 10
+  total_days: 30
   initial_day: '2022-02-01'
   step_duration:
     weekday:
@@ -20,45 +20,19 @@ timer:
   step_activities:
     weekday:
       0:
-      - household
+      - school
     weekend:
       0:
       - household
 
 infection_seed:
-  n_initial_cases: 5 
+  n_initial_cases: 50
 
 networks:
   household:
-    log_beta: 0.5
-
-policies:
-  interaction:
-    social_distancing:
-      1:
-        start_date: 2022-02-15
-        end_date: 2022-03-15
-        beta_factors:
-          school: 0.5
-          company: 0.5
-      2:
-        start_date: 2022-03-15
-        end_date: 2022-04-15
-        beta_factors:
-          pub: 0.5
-          cinema: 0.5
-          gym: 0.5
-          grocery: 0.5
-          visit: 0.5
-      3:
-        start_date: 2023-04-15
-        end_date: 2022-05-15
-        beta_factors:
-          pub: 0.5
-          cinema: 0.5
-          gym: 0.5
-          grocery: 0.5
-          visit: 0.5
+    log_beta: 1.6
+  school:
+    log_beta: 1.4
 
 transmission:
   max_infectiousness:
