--- a/configs/svi_small.yaml
+++ b/configs/svi_small.yaml
@@ -9,17 +9,26 @@ inference_configuration:
   optimizer:
     type: Adam
     lr: 0.01
-  n_steps: 10000
+      #betas: [0.95, 0.999]
+    milestones: [5000, 10000, 15000]
+    gamma: 0.1
+  n_steps: 100000
   loss:
-    type: Trace_ELBO
+    type: Trace_ELBO 
     num_particles: 1
 
 parameters_to_fit:
   infection_networks.networks.household.log_beta:
     prior:
       dist: Normal
-      loc: 0.3
-      scale: 0.1
+      loc: 0.5
+      scale: 0.2
+
+  infection_networks.networks.school.log_beta:
+    prior:
+      dist: Normal
+      loc: 0.5
+      scale: 0.2
 
 emulator:
   use_emulator: false 
@@ -30,6 +39,6 @@ data:
   observable: 
     cases_per_timestep:
       time_stamps: "all"
-      error: 0.005
+      error: 0.001
     
   observed_data: "./results/june/results.csv"
