--- a/configs/ultranest.yaml
+++ b/configs/ultranest.yaml
@@ -1,7 +1,7 @@
 title: UltraNest example configuration file.
 
-device: "cpu"
-june_configuration_file: "./configs/june.yaml"
+device: "cuda:0"
+june_configuration_file: "./configs/june_small.yaml"
 
 results_path: "./results/ultranest"
 
@@ -11,11 +11,11 @@ parameters_to_fit:
       dist: Normal
       loc: 0.3
       scale: 0.1
-  infection_networks.networks.company.log_beta:
-    prior:
-      dist: Normal
-      loc: 0.1
-      scale: 0.1
+        #infection_networks.networks.company.log_beta:
+        #  prior:
+        #    dist: Normal
+        #    loc: 0.1
+        #    scale: 0.1
   infection_networks.networks.school.log_beta:
     prior:
       dist: Normal
@@ -23,7 +23,7 @@ parameters_to_fit:
       scale: 0.1
 
 data:
-  observed_data: "./june_example/results.csv"
+  observed_data: "./results/june/results.csv"
   observable: 
     cases_per_timestep:
       time_stamps: [-1]
