--- a/configs/svi.yaml
+++ b/configs/svi.yaml
@@ -3,7 +3,7 @@ title: SVI example configuration file.
 device: "cpu"
 june_configuration_file: "./configs/june.yaml"
 
-results_path: "./svi_results"
+results_path: "./results"
 
 inference_configuration:
   optimizer:
@@ -47,4 +47,4 @@ data:
       time_stamps: [-1]
       error: 0.002
     
-  observed_data: "./june_example/results.csv"
+  observed_data: "./results/june/results.csv"
