--- a/configs/ultranest.yaml
+++ b/configs/ultranest.yaml
@@ -6,28 +6,40 @@ june_configuration_file: "./configs/june_small.yaml"
 results_path: "./results/ultranest"
 
 parameters_to_fit:
-  infection_networks.networks.household.log_beta:
+  infection_networks.networks.visit.log_beta:
     prior:
       dist: Normal
-      loc: 0.3
-      scale: 0.1
+      loc: 1.4
+      scale: 0.5
         #infection_networks.networks.company.log_beta:
         #  prior:
         #    dist: Normal
         #    loc: 0.1
         #    scale: 0.1
-  infection_networks.networks.school.log_beta:
-    prior:
-      dist: Normal
-      loc: 0.1
-      scale: 0.1
+        #infection_networks.networks.school.log_beta:
+        #  prior:
+        #    dist: Normal
+        #    loc: 0.1
+        #    scale: 0.1
 
 data:
   observed_data: "./results/june/results.csv"
-  observable: 
-    cases_per_timestep:
-      time_stamps: [-1]
-      error: 0.002
+  observable:
+    cases_by_age_18:
+      time_stamps: "all"
+      error: 0.1
+    cases_by_age_25:
+      time_stamps: "all"
+      error: 0.1
+    cases_by_age_65:
+      time_stamps: "all"
+      error: 0.1
+    cases_by_age_80:
+      time_stamps: "all"
+      error: 0.1
+    cases_by_age_100:
+      time_stamps: "all"
+      error: 0.1
 
 emulator:
   use_emulator: no
