--- a/configs/june_small.yaml
+++ b/configs/june_small.yaml
@@ -6,7 +6,7 @@ system:
 
     #data_path: '@torch_june/test/data/data.pkl'
     #data_path: '../torch_june/worlds/data_small.pkl'
-data_path: '../torch_june/worlds/data_3_areas.pkl'
+data_path: '/cosma7/data/dp004/dc-quer1/data_london.pkl'
 
 save_path: ./results/june
 
@@ -21,18 +21,29 @@ timer:
   step_activities:
     weekday:
       0:
-      - visit
-        #- household
+      - school
+      - household
     weekend:
       0:
-      - visit
+      - household
 
 infection_seed:
-  n_initial_cases: 20
+  n_initial_cases: 1000
 
 networks:
-  visit:
-    log_beta: 1.6
+  school:
+    log_beta: 1.0
+  household:
+    log_beta: 1.0
+
+policies:
+  interaction:
+    social_distancing:
+      1:
+        start_date: 2022-02-15
+        end_date: 2022-02-28
+        beta_factors:
+          school: 0.5
 
 transmission:
   max_infectiousness:
