reworked how svi works

--- a/configs/svi_small.yaml
+++ b/configs/svi_small.yaml
@@ -8,14 +8,14 @@ results_path: "./results"
 inference_configuration:
   optimizer:
     type: Adam
-    lr: 0.01
+    lr: 0.001
       #betas: [0.95, 0.999]
     milestones: [5000, 10000, 15000]
     gamma: 0.1
   n_steps: 100000
   loss:
     type: Trace_ELBO 
-    num_particles: 1
+    num_particles: 10
 
 parameters_to_fit:
   infection_networks.networks.household.log_beta:
@@ -24,11 +24,11 @@ parameters_to_fit:
       loc: 0.5
       scale: 0.2
 
-  infection_networks.networks.school.log_beta:
-    prior:
-      dist: Normal
-      loc: 0.5
-      scale: 0.2
+        #policies.interaction_policies.policies.0.beta_factors.household:
+        # prior:
+        #    dist: Normal
+        #    loc: 0.8
+        #    scale: 0.2
 
 emulator:
   use_emulator: false 
