--- a/configs/june_small.yaml
+++ b/configs/june_small.yaml
@@ -5,13 +5,13 @@ system:
   random_seed: random
 
     #data_path: '@torch_june/test/data/data.pkl'
-    #data_path: '../torch_june/worlds/data_small.pkl'
-data_path: '/cosma7/data/dp004/dc-quer1/data_london.pkl'
+data_path: '../torch_june/worlds/data_small.pkl'
+    #data_path: '/cosma7/data/dp004/dc-quer1/data_london.pkl'
 
 save_path: ./results/june
 
 timer:
-  total_days: 30
+  total_days: 5
   initial_day: '2022-02-01'
   step_duration:
     weekday:
@@ -28,7 +28,7 @@ timer:
       - household
 
 infection_seed:
-  n_initial_cases: 1000
+  n_initial_cases: 5
 
 networks:
   school:
