--- a/configs/june_small.yaml
+++ b/configs/june_small.yaml
@@ -5,13 +5,13 @@ system:
   random_seed: random
 
     #data_path: '@torch_june/test/data/data.pkl'
-data_path: '../torch_june/worlds/data_small.pkl'
-    #data_path: '/cosma7/data/dp004/dc-quer1/data_london.pkl'
+    #data_path: '../torch_june/worlds/data_small.pkl'
+data_path: '/cosma7/data/dp004/dc-quer1/data_london.pkl'
 
 save_path: ./results/june
 
 timer:
-  total_days: 5
+  total_days: 15
   initial_day: '2022-02-01'
   step_duration:
     weekday:
@@ -21,29 +21,31 @@ timer:
   step_activities:
     weekday:
       0:
-      - school
+      - company
       - household
     weekend:
       0:
+      - company 
       - household
 
 infection_seed:
-  n_initial_cases: 5
+  n_initial_cases: 100
 
 networks:
-  school:
-    log_beta: 1.0
+  company:
+    log_beta: 1.5
   household:
-    log_beta: 1.0
+    log_beta: 0.75
 
 policies:
   interaction:
     social_distancing:
       1:
-        start_date: 2022-02-15
+        start_date: 2022-02-08
         end_date: 2022-02-28
         beta_factors:
-          school: 0.5
+          company: 0.1
+          household: 0.1
 
 transmission:
   max_infectiousness:
