--- a/configs/gradient_descent.yaml
+++ b/configs/gradient_descent.yaml
@@ -19,12 +19,7 @@ inference_configuration:
     reduction: sum
 
 parameters_to_fit:
-  infection_networks.networks.household.log_beta:
-    prior:
-      dist: Normal
-      loc: 1.0
-      scale: 0.5
-  infection_networks.networks.school.log_beta:
+  model.infection_networks.networks.leisure.log_beta:
     prior:
       dist: Normal
       loc: 1.0
@@ -36,7 +31,7 @@ emulator:
 data:
   observed_data: "./results/june/results.csv"
   observable: 
-    cases_per_timestep:
+    daily_deaths_by_district:
       time_stamps: [-1]
-      error: 0.00001
+      error: 0.05
 
